Issue #2019345 by johnv: Renamed Workflow*->get*ByName() to Workflow*->loadByName().
Issue #2124915 by johnv: Fixed transfer transitions with Features.
Issue #2148851 by johnv: Fixed transfer 'tab_roles' using machine names with Features.
Issue #2148851 by brad.bulger, johnv: Fixed warning in Tokens when an old_state is deleted.

Since 7.x-2.0-beta2
Issue #2149027 by johnv: Fixed warning in workflow.rules.inc for PHP5.3/PHP5.4.
Issue #2149121 by johnv: Restructured workflow_views_views_data().
Issue #2149223 by johnv: Moved calls to Transition->isAllowed() into Transition->execute(), removing duplicate code.
Issue #2149451 by hckurniawan: Fixed PHP Warnings in Drupal's core install.inc in distribution.
Issue #2124429 by johnv: Removed obsolete code comment in workflow_revert.
Issue #2019345 by johnv: Removed obsolete code comment in Workflow* classes.
Issue #2149595 by johnv: Fixed Scheduled transitions are invisible, after upgrade to 7.x-2.0-beta2.
Issue #2149671 by johnv: Added dependency on Workflow Node for workflow_search_api.
Issue #2152425 by Propaganistas: Fixed error in WorkflowD7Base::__construct() when using custom entities.
Issue #2019345 by johnv: Fixed workflow_revert now supports $entity_types and $field_name in hook 'transition permitted'.
Issue #2153915 by johnv: Fixed incorrect allowed choices with $force == TRUE and hook 'transition permitted'.
Issue #2019345 by johnv: Fixed flow logic, help texts, warnings of workflow_admin_ui.
Issue #2019345 by johnv: Fixed return array in Workflwo*Transition::load().
Issue #934078 by johnv: Added ability to bulk schedule in workflow_vbo, re-using standard workflow form.
Issue #2019345 by johnv: Renamed workflow_save_transition() to workflow_transition_form_submit().
Issue #2153529 by johnv: Fixed PDO exception upon node_save().
Issue #934078 by johnv: Fixed ability force a bulk state change workflow_vbo, re-using standard workflow form.